# VIEWER

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
src/main/cpp/core/: data_transfer_point.h  readme.md
src/main/cpp/objects/: material_store.cpp  material_store.h  readme.md
src/main/cpp/python_interface/: python_interface.cpp  python_interface.h
src/main/cpp/utils/: export.h
src/main/python/viewer/: py_wrapper.py
src/test/python/: main.py
